--- a/html/home.html
+++ b/html/home.html
@@ -46,7 +46,7 @@
                         <a href="/portfolio/contact.html"><button class="btn">Contact Me</button></a>
                     </div>
                 </div>
-                <div class="devPic"><img src="profile.jpeg" alt="Janisa Kashyap"></div>
+                <div class="devPic"><img src="profile.jpg" alt="Janisa Kashyap"></div>
            </div>
         </div>
     </div>
